@@ -4,7 +4,7 @@
 
 #include <testfwk.h>
 
-foreach(`int_right', (0x0100, 0x0200, 0x0400, 0x0800, 0x1000, 0x2000, 0x4000, 0x8000), `
+foreach(`int_right', (0x0080, 0x0100, 0x0200, 0x0400, 0x0800, 0x1000, 0x2000, 0x4000, 0x8000), `
 int
 lwr_if_`'int_right (unsigned left)
 {
@@ -33,7 +33,7 @@ test_lwr_`'int_right (void)
 }
 ')dnl
 
-foreach(`int_right', (0x00ff, 0x01ff, 0x03ff, 0x07ff, 0x0fff, 0x1fff, 0x3fff, 0x7fff), `
+foreach(`int_right', (0x007f, 0x00ff, 0x01ff, 0x03ff, 0x07ff, 0x0fff, 0x1fff, 0x3fff, 0x7fff), `
 int
 gtr_if_`'int_right (unsigned left)
 {
